# JobGraph

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: candidate_profile.yaml  companies.yaml  settings.yaml
scripts/: bootstrap.ps1  register_schedule.ps1  run_agent.ps1
src/jobgraph/: __init__.py  cli.py  config.py  filters.py  llm.py  models.py  notifications.py  pipeline.py  renderer.py  reporting.py  state.py  utils.py
src/jobgraph/scrapers/: __init__.py  base.py  generic_html.py  greenhouse.py  lever.py  smartrecruiters.py
